tests/ui/parser/transient.stderr
error: no visibility specified
  --> ROOT/tests/ui/parser/transient.sol:LL:CC
   |
LL |     function f(uint256 transient) {
   |              ^
   |
   = help: do you intend to add public?

error: no visibility specified
  --> ROOT/tests/ui/parser/transient.sol:LL:CC
   |
LL |     function f2(uint256 transient, bool) {
   |              ^^
   |
   = help: do you intend to add public?

error: aborting due to 2 previous errors

